setting up mongoose, swagger and basic routing
